[package]
name = "neptune_test"
version = "0.1.0"
edition = "2024"

[dependencies]
neptune= { path = "../neptune" }
litesvm = "0.6.0"
anchor-lang = "0.31.0"
solana-keypair = "2.2.1"
solana-message = "2.2.1"
solana-pubkey = "2.2.1"
solana-signer = "2.2.1"
solana-system-interface = "1.0.0"
solana-transaction = "2.2.1"